--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,7 +1,9 @@
 /* Box sizing rules */
 *,
 *::before,
-*::after {
+*::after,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -21,15 +23,40 @@ dd {
   outline: 0;
 }
 
+/* display: block */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+/* display: inline-block */
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+}
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
-/* Set core root defaults */
-html:focus-within {
+/* Set core html defaults */
+html {
   scroll-behavior: smooth;
+  -webkit-text-size-adjust: 100%;
 }
 
 /* Set core body defaults */
@@ -37,6 +64,19 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+}
+
+/* Hyperlink */
+a {
+  /* text-decoration: none; */
+  /* background-color: transparent; */
+  -webkit-text-decoration-skip: objects;
+}
+
+/* Outline for hyperlinks */
+a:active,
+a:hover {
+  outline-width: 0;
 }
 
 /* A elements that don't have a class get default styles */
@@ -48,7 +88,9 @@ a:not([class]) {
 img,
 picture {
   max-width: 100%;
+  max-height: 100%;
   display: block;
+  border-style: none;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -62,9 +104,9 @@ select {
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
-  
+
   *,
   *::before,
   *::after {
