--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,11 @@
   src: url("../../static/fonts/DMSerifDisplay-Regular.ttf");
 }
 
+@font-face {
+  font-family: "AutourOne";
+  src: url("../../static/fonts/AutourOne-Regular.ttf");
+}
+
 html {
   cursor: url("https://cdn.custom-cursor.com/db/cursor/32/Bongo_Cat_Cursor.png"), default;
   -ms-text-size-adjust: 100%;
