--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,14 +10,12 @@
 $primary-color: #1f2f5f;
 $secondary-color: #2e488e;
 $bright-yellow: rgb(210, 167, 58);
+$dark: #1e1e1e;
+$light-dark: #1f1f1f;
 
 /* 
  * General
  */
-body {
-  font-family: DMSerifDisplay, Arial, Helvetica, sans-serif;
-}
-
 .active {
   color: goldenrod !important;
 }
@@ -71,10 +69,13 @@ body {
 /* 
  * Page specific styles
  */
+
+// Hero section
 .hero-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: DMSerifDisplay, Arial, Helvetica, sans-serif;
   background-color: $bright-yellow;
   min-height: 90vh;
 
@@ -83,7 +84,7 @@ body {
     height: 90vh;
   }
 
-  @media (max-height: 300px) {
+  @media (max-height: 400px) {
     display: none;
   }
 }
@@ -116,6 +117,7 @@ body {
 
 .type-wrapper {
   display: inline-block;
+  z-index: 10;
   position: relative;
   width: auto;
 
@@ -126,6 +128,7 @@ body {
     top: 0%;
     left: -30%;
     font-family: SourceCodePro;
+    z-index: 1;
     font-size: max(2rem, 3vmin);
     appearance: none;
     width: 100%;
@@ -173,4 +176,120 @@ body {
       }
     }
   }
+}
+
+// Gradient
+.gradient-container {
+  background: linear-gradient(180deg, $bright-yellow 3%, $secondary-color 44%, $primary-color 70%, $dark 100%);
+}
+
+// About section
+.about-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 100vh;
+}
+
+.about-header {
+  // align left by default
+  align-self: flex-start;
+  background-color: $dark;
+  color: white;
+  font-family: Lato-Black, Arial, Helvetica, sans-serif;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 10vh;
+  margin-bottom: 3vh;
+  padding: 1rem 4rem;
+}
+
+.about-text {
+  // align left by default
+  align-self: flex-start;
+  white-space: pre-line;
+  background-color: $light-dark;
+  color: white;
+  font-family: Lato-Regular, Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  max-width: 60ch;
+  padding: 2rem;
+}
+
+.about-header-right {
+  @extend .about-header;
+  align-self: flex-end;
+  margin-right: 2rem;
+}
+
+.about-text-right {
+  @extend .about-text;
+  align-self: flex-end;
+}
+
+// Contact section
+.link-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 90vh;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+
+  > ul {
+    list-style-type: none;
+  }
+
+  @media (max-width: 768px) {
+    height: 80vh;
+  }
+}
+
+.link-header {
+  display: block;
+  font-family: PixelifySans, Arial, Helvetica, sans-serif;
+  color: white;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: max(0.8rem, 3vh);
+
+  @media (max-width: 768px) {
+    font-size: 2rem;
+  }
+}
+
+.link-item {
+  display: block;
+  background-color: white;
+  border-radius: 2rem;
+  width: 70%;
+  text-align: center;
+  margin: 1.1rem auto;
+  padding: 1rem 2rem;
+  transition: all 0.5s;
+
+  &:hover {
+    background-color: $dark;
+    color: white;
+    transition: all 0s;
+  }
+
+  @media (max-width: 1024px) {
+    margin: 1.1rem auto;
+    padding: 0.5rem 1rem;
+  }
+
+  @media (max-width: 768px) {
+    margin: 1.1rem auto;
+    padding: 0.5rem 0.8rem;
+  }
+}
+
+.link-text {
+  display: block;
+  height: 100%;
+  width: 100%;
+  font-family: PixelifySans, Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
+  text-transform: uppercase;
 }
