--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -17,7 +17,9 @@ p,
 figure,
 blockquote,
 dl,
-dd {
+dd,
+ul,
+ol {
   margin: 0;
   padding: 0;
   outline: 0;
@@ -55,7 +57,6 @@ ol[role="list"] {
 
 /* Set core html defaults */
 html {
-  scroll-behavior: smooth;
   -webkit-text-size-adjust: 100%;
 }
 
