--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,6 +36,7 @@
 
 /* Global CSS settings */
 html {
+  // scroll-behavior: smooth;
   cursor: url("https://cdn.custom-cursor.com/db/cursor/32/Bongo_Cat_Cursor.png"), default;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
