--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -199,6 +199,8 @@ $light-dark: #1f1f1f;
   font-family: Lato-Black, Arial, Helvetica, sans-serif;
   font-size: 2.5rem;
   text-align: center;
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
   margin-top: 10vh;
   margin-bottom: max(2rem, 3vh);
   padding: 1rem 4rem;
@@ -216,7 +218,7 @@ $light-dark: #1f1f1f;
   color: white;
   font-family: Lato-Regular, Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
-  max-width: 60ch;
+  max-width: 65ch;
   padding: 2rem;
   margin-bottom: max(2rem, 3vh);
 
@@ -228,7 +230,10 @@ $light-dark: #1f1f1f;
 .about-header-right {
   @extend .about-header;
   align-self: flex-end;
-  margin-right: 2rem;
+  border-top-right-radius: 0rem;
+  border-bottom-right-radius: 0rem;
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
 }
 
 .about-text-right {
@@ -243,11 +248,6 @@ $light-dark: #1f1f1f;
   min-height: 90vh;
   align-items: center;
   justify-content: center;
-  list-style-type: none;
-
-  > ul {
-    list-style-type: none;
-  }
 
   @media (max-width: 768px) {
     height: 80vh;
@@ -300,9 +300,6 @@ $light-dark: #1f1f1f;
 }
 
 .link-text {
-  display: block;
-  height: 100%;
-  width: 100%;
   font-family: PixelifySans, Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
   text-transform: uppercase;
