--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,15 +3,8 @@
  */
 @import "typed";
 @import "typed-config";
-
-/* 
- * Color variables
- */
-$primary-color: #1f2f5f;
-$secondary-color: #2e488e;
-$bright-yellow: rgb(210, 167, 58);
-$dark: #1e1e1e;
-$light-dark: #1f1f1f;
+@import "color-vars";
+@import "animations";
 
 /* 
  * General
@@ -36,7 +29,7 @@ $light-dark: #1f1f1f;
     left: 0;
     right: 0;
     width: 0%;
-    background: $bright-yellow;
+    background: $dark-yellow;
     content: "";
     color: transparent;
     height: $thickness;
@@ -44,7 +37,7 @@ $light-dark: #1f1f1f;
   }
 
   &:hover {
-    color: $bright-yellow;
+    color: $dark-yellow;
     &::after {
       width: 100%;
     }
@@ -52,58 +45,15 @@ $light-dark: #1f1f1f;
 }
 
 /* 
- * Animations
- */
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes bounce {
-  from {
-    transform: translate3d(0, 0, 0);
-  }
-
-  to {
-    transform: translate3d(0, 50%, 0);
-  }
-}
-
-@-webkit-keyframes bounce {
-  from {
-    transform: translate3d(0, 0, 0);
-  }
-
-  to {
-    transform: translate3d(0, 50%, 0);
-  }
-}
-
-/* 
  * Page specific styles
  */
-
 // Hero section
 .hero-container {
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: DMSerifDisplay, Arial, Helvetica, sans-serif;
-  background-color: $bright-yellow;
+  background-color: $dark-yellow;
   min-height: 90vh;
 
   user-select: none;
@@ -132,14 +82,6 @@ $light-dark: #1f1f1f;
 .hero-name {
   @extend .cursive;
   font-size: 110%;
-}
-
-.fadeIn {
-  opacity: 0;
-  animation: fadeIn 1s ease-in 200ms;
-  -webkit-animation: fadeIn 1s ease-in 200ms;
-  animation-fill-mode: forwards;
-  -webkit-animation-fill-mode: forwards;
 }
 
 .type-wrapper {
@@ -207,7 +149,7 @@ $light-dark: #1f1f1f;
 
 // Gradient
 .gradient-container {
-  background: linear-gradient(180deg, $bright-yellow 3%, $secondary-color 44%, $primary-color 70%, $dark 100%);
+  background: linear-gradient(180deg, $dark-yellow 3%, $secondary-color 44%, $primary-color 70%, $dark 100%);
 }
 
 // About section
@@ -259,7 +201,7 @@ $light-dark: #1f1f1f;
   margin-bottom: max(2rem, 3vh);
 
   @media (max-width: 768px) {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -301,7 +243,7 @@ $light-dark: #1f1f1f;
   margin-bottom: max(0.8rem, 3vh);
 
   @media (max-width: 768px) {
-    font-size: 2rem;
+    font-size: 2.3rem;
   }
 }
 
@@ -322,7 +264,7 @@ $light-dark: #1f1f1f;
   }
 
   &:last-child {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
   }
 
   @media (max-width: 1024px) {
