--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -6,32 +6,32 @@
 /* Fonts */
 @font-face {
   font-family: "Monarda";
-  src: url("../../static/fonts/Monarda.ttf");
+  src: url("../../../static/fonts/Monarda.ttf");
 }
 
 @font-face {
   font-family: "PixelifySans";
-  src: url("../../static/fonts/PixelifySans-Regular.ttf");
+  src: url("../../../static/fonts/PixelifySans-Regular.ttf");
 }
 
 @font-face {
   font-family: "DMSerifDisplay";
-  src: url("../../static/fonts/DMSerifDisplay-Regular.ttf");
+  src: url("../../../static/fonts/DMSerifDisplay-Regular.ttf");
 }
 
 @font-face {
   font-family: "Lato-Black";
-  src: url("../../static/fonts/Lato-Black.ttf");
+  src: url("../../../static/fonts/Lato-Black.ttf");
 }
 
 @font-face {
   font-family: "Lato-Regular";
-  src: url("../../static/fonts/Lato-Regular.ttf");
+  src: url("../../../static/fonts/Lato-Regular.ttf");
 }
 
 @font-face {
   font-family: "SourceCodePro";
-  src: url("../../static/fonts/SourceCodePro-Regular.ttf");
+  src: url("../../../static/fonts/SourceCodePro-Regular.ttf");
 }
 
 /* Global CSS settings */
