--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,5 +1,5 @@
-@import "color-vars";
-@import "animations";
+@import "../global/color-vars.scss";
+@import "../global/animations";
 
 /* 
  * Page specific styles
