--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,10 +1,10 @@
 /* 
  * Imports
  */
-@import "typed";
-@import "typed-config";
-@import "color-vars";
-@import "animations";
+@import "../lib/typed.scss";
+@import "../lib/typed-config.scss";
+@import "../global/color-vars.scss";
+@import "../global/animations.scss";
 
 /* 
  * General
