--- a/src/styles/pages/contact.scss
+++ b/src/styles/pages/contact.scss
@@ -47,14 +47,21 @@
   padding: 1rem 2rem;
   transition: all 0.25s;
 
+  &:last-child {
+    margin-bottom: 2rem;
+  }
+
   &:hover {
     background-color: $dark;
     color: white;
     transition: all 0s;
   }
 
-  &:last-child {
-    margin-bottom: 2rem;
+  @media (hover: none) {
+    &:hover {
+      color: inherit;
+      background-color: white;
+    }
   }
 
   @media (max-width: 1024px) {
