--- a/src/styles/global/color-vars.scss
+++ b/src/styles/global/color-vars.scss
@@ -7,5 +7,10 @@ $dark-yellow: rgb(210, 167, 58);
 $bright-yellow: #ffd54f;
 $dark: #1e1e1e;
 $light-dark: #1f1f1f;
-$light-blue: #c8e8f3;
-$sky-blue: #96d1ea;
+$light-light-blue: #d3f0f9;
+$light-blue: #99def4;
+$sky-blue: #5db5dbd8;
+$mid-blue: #539fd8;
+$dark-blue: rgb(22, 76, 118);
+$shadow: #dfdfdf;
+$light_purple: rgb(173, 184, 236);
