--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -18,74 +18,6 @@
 }
 
 /* 
- * Mixins
- */
-@mixin underline-animation($thickness: 2px) {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    right: 0;
-    width: 0%;
-    background-color: white;
-    content: "";
-    color: transparent;
-    height: $thickness;
-    transition: all 0.3s ease-in;
-  }
-
-  &:hover {
-    &::after {
-      width: 100%;
-    }
-  }
-
-  @media (hover: none) {
-    &:hover {
-      &::after {
-        width: 0%;
-      }
-    }
-  }
-}
-
-@mixin reverse-underline-animation($thickness: 2px) {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    right: 0;
-    width: 100%;
-    background-color: white;
-    content: "";
-    color: transparent;
-    height: $thickness;
-    transition: transform 0.2s ease-in;
-    transform: scaleX(0);
-    transform-origin: right;
-  }
-
-  &:hover {
-    &::after {
-      transform: scaleX(1);
-      transform-origin: left;
-    }
-  }
-
-  @media (hover: none) {
-    &:hover {
-      &::after {
-        width: 0%;
-      }
-    }
-  }
-}
-
-/* 
  * Page specific styles
  */
 // Hero section
@@ -95,7 +27,7 @@
   justify-content: center;
   font-family: DMSerifDisplay, Arial, Helvetica, sans-serif;
   background-color: $dark-yellow;
-  min-height: 90vh;
+  min-height: max(90vh, 30rem);
 
   user-select: none;
   -webkit-user-select: none;
