--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -53,7 +53,7 @@
       #c5ebff 16.666%,
       #b8e4fb 16.666%,
       #c9e7f8 33.333%,
-      #ace3fb 33.333%,
+      #b6e4f7 33.333%,
       #c4e6f8 50%,
       #c6e3ff 50%,
       #c5ebff 66.666%,
