--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -37,6 +37,10 @@
     min-height: auto;
     height: 90vh;
   }
+
+  @media (max-width: 425px) {
+    height: 50vh;
+  }
 }
 
 .hero-text {
@@ -49,6 +53,14 @@
 
   @media (max-width: 564px) {
     font-size: 2.5rem;
+  }
+
+  @media (max-width: 425px) {
+    margin-bottom: 1rem;
+  }
+
+  @media (max-width: 320px) {
+    font-size: 2rem;
   }
 }
 
@@ -159,6 +171,11 @@
   @media (max-width: 768px) {
     font-size: 1.8rem;
   }
+
+  @media (max-width: 375px) {
+    font-size: 1.3rem;
+    padding: 1rem 3rem;
+  }
 }
 
 .about-text {
@@ -175,6 +192,10 @@
 
   @media (max-width: 768px) {
     font-size: 1.2rem;
+  }
+
+  @media (max-width: 375px) {
+    font-size: 1rem;
   }
 }
 
@@ -218,6 +239,10 @@
   @media (max-width: 768px) {
     font-size: 2.3rem;
   }
+
+  @media (max-width: 375px) {
+    font-size: 1.8rem;
+  }
 }
 
 .link-item {
@@ -256,10 +281,18 @@
     margin: 1.1rem auto;
     padding: 0.5rem 0.8rem;
   }
+
+  @media (max-width: 375px) {
+    padding: 0.3rem 0.5rem;
+  }
 }
 
 .link-text {
   font-family: PixelifySans, Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
   text-transform: uppercase;
+
+  @media (max-width: 375px) {
+    font-size: 1rem;
+  }
 }
