--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -288,6 +288,10 @@
 
   @media (max-width: 375px) {
     padding: 0.3rem 0.5rem;
+
+    &:last-child {
+      margin-bottom: 1rem;
+    }
   }
 }
 
