--- a/src/styles/global/animations.scss
+++ b/src/styles/global/animations.scss
@@ -9,6 +9,15 @@
   -webkit-animation-fill-mode: forwards;
 }
 
+@keyframes spin {
+  40% {
+    transform: rotateY(-90deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -28,23 +37,77 @@
   }
 }
 
-@keyframes bounce {
+@keyframes wiggle {
   from {
-    transform: translate3d(0, 0, 0);
+    -webkit-transform: none;
+    transform: none;
+  }
+
+  15% {
+    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
+    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
+  }
+
+  30% {
+    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
+    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
+  }
+
+  45% {
+    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
+    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
+  }
+
+  60% {
+    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+  }
+
+  75% {
+    -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
+    transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
   }
 
   to {
-    transform: translate3d(0, 50%, 0);
+    -webkit-transform: none;
+    transform: none;
   }
 }
 
-@-webkit-keyframes bounce {
+@-webkit-keyframes wiggle {
   from {
-    transform: translate3d(0, 0, 0);
+    -webkit-transform: none;
+    transform: none;
+  }
+
+  15% {
+    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
+    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
+  }
+
+  30% {
+    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg);
+    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
+  }
+
+  45% {
+    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
+    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
+  }
+
+  60% {
+    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+  }
+
+  75% {
+    -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
+    transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
   }
 
   to {
-    transform: translate3d(0, 50%, 0);
+    -webkit-transform: none;
+    transform: none;
   }
 }
 
