--- a/src/styles/global/color-vars.scss
+++ b/src/styles/global/color-vars.scss
@@ -6,6 +6,7 @@ $secondary-color: #2e488e;
 $dark-yellow: rgb(210, 167, 58);
 $bright-yellow: #ffd54f;
 $dark: #1e1e1e;
+$dark-and-darker: #0e0e0e;
 $light-dark: #1f1f1f;
 $light-light-blue: #d3f0f9;
 $light-blue: #99def4;
