--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -44,12 +44,23 @@
 }
 
 .hero-text {
-  color: black;
+  color: $dark-and-darker;
   position: relative;
   font-weight: 600;
   text-align: center;
   font-size: max(3.7rem, 10vmin);
   padding: 2.2rem;
+
+  > span {
+    position: relative;
+    z-index: 3;
+  }
+
+  @media (hover: none) {
+    &:hover {
+      color: inherit;
+    }
+  }
 
   @media (max-width: 564px) {
     font-size: 2.5rem;
@@ -71,8 +82,8 @@
 
 .type-wrapper {
   display: inline-block;
-  z-index: 2;
   position: relative;
+  z-index: 2;
   width: auto;
 
   > input,
