--- a/src/styles/global/animations.scss
+++ b/src/styles/global/animations.scss
@@ -9,15 +9,6 @@
   -webkit-animation-fill-mode: forwards;
 }
 
-@keyframes spin {
-  40% {
-    transform: rotateY(-90deg);
-  }
-  100% {
-    transform: rotateY(0deg);
-  }
-}
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -37,84 +28,10 @@
   }
 }
 
-@keyframes wiggle {
-  from {
-    -webkit-transform: none;
-    transform: none;
-  }
-
-  15% {
-    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
-    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
-  }
-
-  30% {
-    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
-    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
-  }
-
-  45% {
-    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
-    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
-  }
-
-  60% {
-    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
-    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
-  }
-
-  75% {
-    -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
-    transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
-  }
-
-  to {
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@-webkit-keyframes wiggle {
-  from {
-    -webkit-transform: none;
-    transform: none;
-  }
-
-  15% {
-    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
-    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -8deg);
-  }
-
-  30% {
-    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 5deg);
-    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 7deg);
-  }
-
-  45% {
-    -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
-    transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -5deg);
-  }
-
-  60% {
-    -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
-    transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
-  }
-
-  75% {
-    -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
-    transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -2deg);
-  }
-
-  to {
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
 /* 
  * Mixins
  */
-@mixin underline-animation($thickness: 2px, $color: white, $bottom: -2px) {
+@mixin underline-animation($thickness: 2px, $color: white, $bottom: -2px, $in-time: 300ms, $out-time: 300ms) {
   position: relative;
 
   &::after {
@@ -127,11 +44,12 @@
     content: "";
     color: transparent;
     height: $thickness;
-    transition: all 0.3s ease-in;
+    transition: width $out-time ease-out;
   }
 
   &:hover {
     &::after {
+      transition: width $in-time linear;
       width: 100%;
     }
   }
@@ -145,7 +63,7 @@
   }
 }
 
-@mixin reverse-underline-animation($thickness: 2px, $color: white, $bottom: -2px) {
+@mixin reverse-underline-animation($thickness: 2px, $color: white, $bottom: -2px, $in-time: 250ms, $out-time: 500ms) {
   position: relative;
 
   &::after {
@@ -158,13 +76,14 @@
     content: "";
     color: transparent;
     height: $thickness;
-    transition: transform 0.2s ease-in;
+    transition: transform $out-time ease-out;
     transform: scaleX(0);
     transform-origin: right;
   }
 
   &:hover {
     &::after {
+      transition: transform $in-time ease-in;
       transform: scaleX(1);
       transform-origin: left;
     }
