--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -63,7 +63,7 @@
   }
 
   @media (max-width: 564px) {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
 
   @media (max-width: 425px) {
@@ -78,6 +78,11 @@
 .hero-name {
   @extend .cursive;
   font-size: 110%;
+}
+
+.toggle-container {
+  display: inline-block;
+  position: relative;
 }
 
 .type-wrapper {
@@ -100,7 +105,7 @@
     height: 100%;
     background-color: transparent;
 
-    @media (max-width: 900px) {
+    @media (max-width: 1024px) {
       display: none;
     }
   }
