--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -20,6 +20,7 @@
 /* 
  * Page specific styles
  */
+
 // Hero section
 .hero-container {
   display: flex;
@@ -169,7 +170,7 @@
 .about-header {
   // align left by default
   align-self: flex-start;
-  background-color: $dark;
+  background-color: $light-dark;
   color: white;
   font-family: Lato-Black, Arial, Helvetica, sans-serif;
   font-size: 2.5rem;
