--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -119,12 +119,12 @@
   > .placeholder {
     @include typed(
       "(ﾉ◕ヮ◕)ﾉ・ﾟ✧",
-      "༼ つ◕_◕ ༽つ",
+      "༼ つ ◕_◕ ༽つ",
       "ʕ •`ᴥ•´ʔ",
+      "ฅ(^•ܫ•^)ฅ",
       "ʕ•ᴥ•ʔ",
-      "ʕ•͡ω•ʔ ✧",
+      "ʕ•~•ʔ ✧",
       "|(• ◡•)|",
-      "ξ・_>・）",
       "(•ᴥ• )",
       "¯\\_(ツ)_/¯",
       "(っ^з^)♬",
@@ -132,6 +132,7 @@
       "◖ᵔᴥᵔ◗ ♪",
       "◕_◕",
       "( ͡° ͜ʖ ͡°)",
+      "つ ◕_◕ ༽つ",
       "._.)/\\(._.",
       "ʕ•ᴥ•ʔ",
       "ʕ •`ᴥ•´ʔ",
