--- a/src/styles/global/color-vars.scss
+++ b/src/styles/global/color-vars.scss
@@ -8,7 +8,7 @@ $bright-yellow: #ffd54f;
 $dark: #1e1e1e;
 $dark-and-darker: #0e0e0e;
 $light-dark: #242424;
-$light-light-blue: #d3f0f9;
+$light-light-blue: #f3fafc;
 $light-blue: #99def4;
 $sky-blue: #5db5dbd8;
 $mid-blue: #539fd8;
